samples/_failures_safe/1761498409_416ad3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2643c3b.c: In function ‘handle_event’:
./samples/SAFE/__tmp_e2643c3b.c:154:18: error: expected ‘;’ at end of input
  154 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_e2643c3b.c:154:13: error: expected declaration or statement at end of input
  154 |             break
      |             ^~~~~
./samples/SAFE/__tmp_e2643c3b.c:154:13: error: expected declaration or statement at end of input
